<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_account">Account</string>
    <string name="action_guide">Guide</string>
    <string name="action_home">Home</string>
    <string name="action_live_tv">Live TV</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_bar_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_vod">VOD</string>
    <string name="action_wish_list">Wish List</string>
    <string name="app_name">ACC Mobile TV</string>
    <string name="cast_crew">Cast &amp; Crew</string>
    <string name="crash_toast_text">Application get Crashed,Choose mail to send crash report</string>
    <string name="description">Media Controls</string>
    <string name="duration">Duration</string>
    <string name="email_id">Email Id</string>
    <string name="end_time">End Time</string>
    <string name="first_name">First Name</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="last_name">Last Name</string>
    <string name="live_tv">Live TV</string>
    <string name="mobile_no">Mobile No</string>
    <string name="movie_descr">Movie Description</string>
    <string name="movie_details">Movie Details</string>
    <string name="own_buy">Own / Buy :</string>
    
    <string name="prog_guide">Program Guide</string>
    <string name="prog_title">Program Title</string>
    <string name="reg_acc">Register your account</string>
    <string name="release">Release</string>
    <string name="rental">Rental :</string>
    <string name="reg_note">ACC Mobile TV allows user with Mobile Phones, Smart Phones &amp; Tablets
         to enjoy premium digital TV signals on their devices.</string>
    <string name="sel_pkg">Select Package</string>
    <string name="server_url">https://spark.openbillingsystem.com/obsplatform/api/v1/</string>
    <string name="start_time">Start Time</string>
    <string name="user_name">User Name</string>
    <string name="user_reg">User Registration</string>
    <string name="vod">VOD</string>

    <!-- String Arrays -->
     <string-array name="arrMenu">
        <item>Live TV</item>
        <item>VOD</item>
        <item>Music</item>
        <item>Games</item>
    </string-array>
    <string-array name="arrMenuImageNames">
        <item>live_tv</item>
        <item>vod</item>
        <item>music</item>
        <item>games</item>
    </string-array>
     <string-array name="arrLangauges">
        <item>Telugu</item>
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string-array name="arrMovCategNames">
        <item>New Movies</item>
        <item>High Rating</item>
        <item>Coming Soon</item>
        <item>All Movies</item>
    </string-array>
     <string-array name="arrMovCategValues">
        <item>RELEASE</item>
        <item>RATING</item>
        <item>COMING</item>
        <item>ALL</item>
    </string-array>
</resources>