<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_btn_home"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:icon="@drawable/ic_action_home_icon"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_home"/>
    <item
        android:id="@+id/menu_btn_guide"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:icon="@drawable/ic_action_guide_icon"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_guide"/>
    <item
        android:id="@+id/menu_btn_settings"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:icon="@drawable/ic_action_settings_icon"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_btn_account"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:icon="@drawable/ic_action_account_icon"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/action_account"/>
    <item
        android:id="@+id/menu_btn_wish_list"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:icon="@drawable/ic_action_wish_list_icon"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/action_wish_list"/>
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="6"
        android:showAsAction="always"
        android:title="@string/action_bar_search"/>
    <item
        android:id="@+id/menu_btn_refresh"
        android:icon="@drawable/ic_stat_navigation_refresh"
        android:orderInCategory="7"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        android:visible="false"/>

</menu>