<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF7C00"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/a_reg_iv_img_acc"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/img_acc" />

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/img_bg_reg_forum"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/a_reg_tv_user_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="2dp"
            android:text="@string/user_reg"
            android:textColor="#5A5A5A"
            android:textSize="9sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/a_reg_et_mobile_no"
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/img_et_reg"
            android:ems="10"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            android:textSize="9sp"
            android:paddingLeft="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/a_reg_et_first_name"
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/img_et_reg"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textSize="9sp"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/a_reg_et_last_name"
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/img_et_reg"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textSize="9sp"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/a_reg_et_email_id"
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/img_et_reg"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="text"
            android:textSize="9sp"
            android:paddingLeft="10dp" />

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="3dp" >

            <Button
                android:id="@+id/a_reg_btn_cancel"
                android:layout_width="60dp"
                android:layout_height="19dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_cancel"
                android:onClick="btnCancel_onClick" />

            <Button
                android:id="@+id/a_reg_btn_submit"
                android:layout_width="60dp"
                android:layout_height="19dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_submit"
                android:onClick="btnSubmit_onClick" />
        </LinearLayout>

        <TextView
            android:id="@+id/a_reg_tv_note"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:gravity="center_horizontal"
            android:text="@string/reg_note"
            android:textAlignment="center"
            android:textColor="#5A5A5A"
            android:textSize="7sp" />
    </LinearLayout>

</LinearLayout>