<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <TextView
        android:id="@+id/a_epg_tv_prog_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#FF7C00"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/prog_guide"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/a_epg_tv_prog_guide"
        android:layout_margin="5dp" >

        <ListView
            android:id="@+id/a_epg_lv_prog_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:layout_below="@+id/a_epg_rlayout_header"
            android:divider="#FFFFFF"
            android:dividerHeight="5dp"
            android:scrollbars="vertical" >
        </ListView>

        <RelativeLayout
            android:id="@+id/a_epg_rlayout_header"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/img_bg_epg_header1" >

            <TextView
                android:id="@+id/a_epg_tv_prog_title"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:text="@string/prog_title"
                android:paddingLeft="10dp"
                android:paddingTop="9dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/a_epg_tv_start_time"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:paddingTop="9dp"
                android:text="@string/start_time"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/a_epg_tv_end_time"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:paddingLeft="5dp"
                android:paddingTop="9dp"
                android:text="@string/end_time"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>